# Chat-App-LLM

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
app/: __init__.py
app/routes/: chat.py  web.py
app/services/: chat_service.py  llm_service.py
app/static/css/: style.css
app/templates/: base.html  chat.html  index.html
app/utils/: embeddings.py  memory_manager.py
config/: config.py
